2023-12-18  Georg-Johann Lay  <avr@gjlay.de>

	Generate the <mcu>-sim.exp board descriptions so that RAM layout
	is described thoroughly.

	* dejagnuboards/gen-exp.sh: Generate board descriptions that define
	Tdata and symbols: __DATA_REGION_ORIGIN__, __DATA_REGION_LENGTH__,
	__stack, __heap_end.
	* dejagnuboards/<mcu>-sim.exp: Regenerate.
	* dejagnuboards/avr128da32-sim.exp: New file.

2023-12-06  Georg-Johann Lay  <avr@gjlay.de>

	Add limited support for NVMCTRL_CTRLB.FLMAP Devices from
	the AVR64* and AVR128* families see a 32 KiB block of their
	program memeory in the RAM address space.  avrtest_init_rodata()
	is called from exit.c and copies that block from flash to RAM.

	* avrtest.h (avrtest_misc_flmap): New syscall.
	* avrtest.c (sys_misc): New static function.
	(func_SYSCALL) [sysno=21]: Call sys_misc.
	* dejagnuboards/exit.c (avr/io.h) [XMEGA]: Include it.
	(avrtest_init_flmap): New static function in section .init0.
	(avrtest_init_rodata): New static function in section .init4.

2023-12-04  Georg-Johann Lay  <avr@gjlay.de>

	* options.c (arch_desc) [avrxmega4]: Fix flash mask.
	* load-flash.c (phdr_name, phdr_flags_str): New static functions.
	(load_elf): Use them for better verbosity.
	Load all program headers to flash memory that have a
	load memory address below 0x800000 (data VMA).

2023-11-20  Georg-Johann Lay  <avr@gjlay.de>

	Don't use __typeof__(x) when x might be an address.  Otherwise, it's
	not possible to print the address of a static array.

	* avrtest.h (LOG_DUMP_A_): New macro.
	(LOG_FMT_ADDR, LOG_PFMT_ADDR): Use it instead of LOG_DUMP_F_.

2023-11-14  Georg-Johann Lay  <avr@gjlay.de>

	* load-flash.c (load_elf) [arch.flash_pm_offset]: Include 0x10000
	in the valid range for addr + memsz + arch.flash_pm_offset.

2023-11-14  Georg-Johann Lay  <avr@gjlay.de>

Support IEEE single and IEEE double emulation.

	* avrtest.h (avrtest_<name>f, avrtest_<name>l, avrtest_<name>_d64):
	New syscalls for <name> in: